[package]
name = "make-quote"
version = "0.5.1"
edition = "2021"
authors = ["Avimitin <dev@avimit.in>"]
description = "A funny toy project that can help you generate a image from someone's quote"
documentation = "https://docs.rs/make-quote"
keywords = ["image", "generate"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/Avimitin/make-quote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
typed-builder = "0.14.0"
thiserror = "1.0.39"

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
